Release Notes - Flume - Version v0.5.0.rc

** New Feature

** Improvement

** Bug

----