@@ -17,3 +17,7 @@
 
 *   https://github.com/funkygao/GoStats, to bring in ML
     https://github.com/jbrukh/bayesian.git
+
+*   RELOAD on HUP
+
+*   if timestamp out of date, force to be now
